# key-nexus

./: .gitignore  deploy.sh  logging.conf  main.py  pyproject.toml
config/: default.json
examples/: nexus.http
modules/: eo.py  flipdisc.py  generic_mqtt.py  homeassistant.py  hubitat.py  sonos.py
system/: key-nexus.service
