[tool.poetry]
name = "key-nexus"
version = "0.1.0"
description = ""
authors = ["Bertrand Fan <bertrand@fan.net>"]
readme = "README.md"
packages = [{include = "key_nexus"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
gunicorn = "^21.2.0"
appcfg = "^1.1.1"
aiohttp = "^3.9.1"
sqlite-utils = "^3.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
